--- a/src/main/webapp/src/routes/Home/components/HomeView.scss
+++ b/src/main/webapp/src/routes/Home/components/HomeView.scss
@@ -1,5 +1,18 @@
-.duck {
-  display: block;
-  width: 120px;
-  margin: 1.5rem auto;
+.home-container {
+  display: flex;
 }
+
+.home-menu {
+
+}
+
+.home-title {
+  flex-grow: 1;
+}
+
+.home-title-text {
+  float: right;
+  border-bottom: 1px dashed black;
+}
+
+
