--- a/src/main/webapp/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/main/webapp/src/layouts/CoreLayout/CoreLayout.scss
@@ -1,13 +1,3 @@
-.core-layout__viewport {
-  padding-top: 4rem;
-  width: 100%;
-}
-
-.container {
-  width: 100%;
-}
-
-.app-container {
-  display: flex;
-  flex-direction: row;
+.layout {
+  height: 100%;
 }
