select correct navigation item

--- a/src/main/webapp/src/routes/Editor/components/Editor.scss
+++ b/src/main/webapp/src/routes/Editor/components/Editor.scss
@@ -1,6 +1,2 @@
-.journal-container {
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.editor-container {
 }
